modal size fixed, truncate

--- a/src/components/modals/EntityListModal/EntityListModal.module.pcss
+++ b/src/components/modals/EntityListModal/EntityListModal.module.pcss
@@ -1,6 +1,6 @@
 .container {
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 750px;
 }
 
 @media (max-width: 768px) {
